--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,45 +10,38 @@
 </head>
 <body style="background-color: #f4f4f4;">
   <div class="navbar-fixed">
-    <nav class="turquoise" >
-      <div class="nav-wrapper  container">
-        <a href="/" class="brand-logo ">Darkroom</a>
+    <nav class="turquoise">
+      <div class="nav-wrapper container">
         <form class="right">
-          <div class="input-field ">
-            <input id="search" class="left"  type="search" required>
+          <div class="input-field">
             <label class="label-icon" for="search"><i class="material-icons right">search</i></label>
             <i class="material-icons">close</i>
           </div>
         </form>
-        <!-- <ul class="right hide-on-med-and-down">
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-        </ul> -->
       </div>
     </nav>
   </div>
     
-    <div class="container">
-        <!-- Add MILESTONE 3 -->
-        <div style="text-align: center; margin-top: 20px;">
-            <h1 style="font-size: 3rem; color: #4CAF50;">MILESTONE 4</h1>
-        </div>
+  <div class="container">
+      <!-- Add Milestone 2: Basic Pipeline -->
+      <div style="text-align: center; margin-top: 20px;">
+          <h1 style="font-size: 3rem; color: #4CAF50;">Milestone 2: Basic Pipeline</h1>
+      </div>
 
-        <div>
-            <% if (msg) { %>
-                <p><%= msg %></p>
-            <% } %>
-            <div class="gallery">
-                <% images.forEach(image => { %>
-                    <div class="image">
-                        <img src="<%= image.path %>" alt="<%= image.name %>">
-                        <p><%= image.name %></p>
-                    </div>
-                <% }) %>
-            </div>
-        </div>
-    </div>
-    
+      <div>
+          <% if (msg) { %>
+              <p><%= msg %></p>
+          <% } %>
+          <div class="gallery">
+              <% images.forEach(image => { %>
+                  <div class="image">
+                      <img src="<%= image.path %>" alt="<%= image.name %>">
+                      <p><%= image.name %></p>
+                  </div>
+              <% }) %>
+          </div>
+      </div>
+  </div>
     
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     
